--- a/index.css
+++ b/index.css
@@ -20,6 +20,17 @@ body {
     padding-top: 10px;
 
  }
+
+
+ h4 {
+    display: flex;
+    margin: 0;
+    padding: 0;
+ }
+
+ h1{
+    font-size: 48px;
+}
 .links {
     display: flex;
     gap: 1rem;
@@ -54,6 +65,7 @@ a {
 .container2 {
    flex-direction: column;
 display: flex;
+padding-bottom: 70px;
 }
 
 .top2 {
@@ -93,26 +105,6 @@ display: flex;
    
 }
 
-.author {
-    display: flex;
-    
-}
-
-.container4 {
-    display: flex;
-    margin: 20px;
-
-}
-
-h1{
-    font-size: 48px;
-}
-
- h4 {
-    display: flex;
-    margin: 0;
-    padding: 0;
- }
 
  button {
     border: solid #0080ff;
@@ -130,6 +122,34 @@ h1{
     background-color: #0080ffd2;
 
  }
+
+ .container4 {
+    display: flex;
+    justify-content: center;
+    margin: 100px;
+ }
+
+ .box1 {
+    display: flex;
+    gap:40px;
+    background-color: #0080ff;
+    color: white;
+    border-radius: 5px;
+    width: 1024px;
+    height: 147px;
+    align-items: center;
+    padding-left: 100px;
+    padding-right: 100px;
+    justify-content: space-between;
+ }
+
+
+
+ 
+ .container4 button {
+    border: solid white;
+ }
+ 
 
 
 
